SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect (done but not enabled)

- 03/01/2005, version 1.80i: roms
	- implemented new method for grayscale computing & management (idea from Kevin)
	- clean-up of popup menu (#colors menu removed)
	- grayscales pb with HW2...
	- fixed UAE to handle multiple pending interrupts and some other fixes
	- idle mode and STOP improved

- 13/12/2004, version 1.80h: roms
	- simplified skin/keymap management (TI92+ => TI92, TI89t => TI89)
	- simplified ROM image/upgrade access
	- display ROM calls in RAM in the mem panel
	- fixed contrast with TI89
	- fixed grayscale computing but grayscales are still flickering
	- switched to gtk-win32-devel-2.4-rc24.exe package: fix tooltips with toolbars

- 15/11/2004, version 1.80g: roms
	- idle() fixed (port $600005)
	- erase FLASH whenever an OS upgrade is loaded.
	- fixed scrolling of instructions in code window
	- data bkpt at $0 are now caught
	- 'Run to cursor': work with far instructions
	- fixed incrementing of $700014
	- removed "C:\\tiemu.log" empty file under Linux
	- added temporary breakpoint mode
	- breakpoints are now editable
	- fixed bugs with data breakpoints
	- fixed bug with 'Run': didn't run if a bkpt is on the current line
	- update stack frame when editing memory hex dump
	- don't list invalid ROM calls any more
	- added frame pointer window
	- stack & frame pointer window are now scrollable
	- remind folder when sending variable
	- allow cross-compatibility when sending TI files
	- switched to the new file selector (seems to be slow)
	- added heap window to show handles
	- fixed LCD address on all calculators
	- improved ROM call management
	- ROM call entry box has now auto-completion
	- refresh code window when removing code bkpt from bkpt window
	- don't save configuration any longer when upgrading calculator
	- removed bkpt cause dbox for status bar in the bkpt dbox