@@ -5,12 +5,16 @@ To do:
 	- link port is broken (HW2 only ?!)
 	- stealth I/O and mem protect (done but not enabled)
 
+- 12/01/2005, version 1.80j: roms
+	- rewrite of the m68k loop:
+		* UAE fixedto handle multiple pending interrupts and some other fixes
+		* idle mode and STOP improved but problems with ON key
+	- ...
+
 - 03/01/2005, version 1.80i: roms
 	- implemented new method for grayscale computing & management (idea from Kevin)
 	- clean-up of popup menu (#colors menu removed)
 	- grayscales pb with HW2...
-	- fixed UAE to handle multiple pending interrupts and some other fixes
-	- idle mode and STOP improved
 
 - 13/12/2004, version 1.80h: roms
 	- simplified skin/keymap management (TI92+ => TI92, TI89t => TI89)
